# veritas

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ruff.yml
kaggle_competitions/backpack-prediction-challenge/: submission.ipynb
kaggle_competitions/classification-with-an-academic-success-dataset/: submission.ipynb
kaggle_competitions/house-prices-advanced-regression-techniques/: submission.ipynb  submission_torch.ipynb
notebooks/: xgboost-example.ipynb
src/veritas/: __init__.py
